Fix wrapsfuel tx, block amount input after wrapping

--- a/src/components/WidgetUI/WidgetUI.scss
+++ b/src/components/WidgetUI/WidgetUI.scss
@@ -301,6 +301,9 @@
     background-image: linear-gradient(135deg, #dedede 0%, #aeaeae 100%);
   }
 
+  .br__action_wrapsfuel {
+    background-image: linear-gradient(160deg, #237bc3 0%, #1a3b94 100%);
+  }
 
   .mp__chainName {
     color: white !important;
@@ -405,6 +408,10 @@
 
   .br__action_wallet {
     background-image: linear-gradient(135deg, #f5f5f5 0%, #dfdfdf 100%);
+  }
+
+  .br__action_wrapsfuel {
+    background-image: linear-gradient(160deg, #9dcff1 0%, #8ab1dd 100%);
   }
 
   .mp__chainName {
